2007-03-10  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_sound_handler.(cpp,h): reverted
	hash< as_object_interface*, .. <== hash< smart_ptr<as_object_interface>, 
	* gameswf/gameswf_video_base.(cpp,h),
	* gameswf/gameswf_video_impl.cpp,
	* gameswf/gameswf_mutex.h,
	* gameswf/gameswf_as_classes/as_netstream.(cpp,h):
	The beginnings of job on stabilization video

2007-03-10  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_mutex.(cpp,h): added tu_mutex type,
	We have redefined SDL mutex functions that
	there was an opportunity to use other libraries (pthread, ...)
	* gameswf/gameswf_sound_handler.(cpp,h):
	* gameswf/gameswf_as_classes/as_netstream.(cpp,h):
	SDL_Mutex ==> tu_mutex

2007-03-10  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_sound_handler.(cpp,h):
	hash< as_object_interface*, .. ==> hash< smart_ptr<as_object_interface>, ..
	to prevent premature deleting of object

2007-03-10  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/win32/VC8/gameswf.vcproj: dlmalloc.(c,h) are removed from project
	because there are enough VC8++ toolkit
	* gameswf/gameswf_netstream.(cpp,h): removed useless struct netstream
	* gameswf/gameswf.h,
	* gameswf/gameswf_video_impl.cpp,
	* gameswf/gameswf_sound_handler.(cpp,h): void* ==> as_object_interface

2007-03-04  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf.h: class video_stream_instance ==> struct ...
	* gameswf/gameswf_video_impl.(cpp,h): pointers ==> smart_ptr<>
	* gameswf/gameswf_as_classes/as_netconnection.(cpp,h): updated comments

2007-03-04  Vitaly Alexeev <tishka92@yahoo.com>

	added the processing of events from video thread (onStatus)
	* gameswf/gameswf_mutex.(cpp,h):
	* gameswf/gameswf_sound_handler_sdl.(cpp,h): struct locker
	moved from sound_handler files into gameswf_mutex files
	* gameswf/gameswf_action.h: commented the unused call_method1..3
	* gameswf/gameswf_action.cpp: added as_netconnection include